--- a/Copy1.ipynb
+++ b/Copy1.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -729,15 +729,15 @@
        "74  male  32.0      0      0    1601  56.4958   NaN        S  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "poor_male_survivors_df = df.loc[(df.Sex == \"male\")\n",
-    "                               & (df.Pclass.isin([\"2\", \"3\"]))\n",
-    "                               & (df.Survived == 1)]\n",
+    "                                & (df.Pclass.isin([\"2\", \"3\"]))\n",
+    "                                & (df.Survived == 1)]\n",
     "poor_male_survivors_df.head()"
    ]
   },
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -906,17 +906,17 @@
        "8      2            347742  11.1333   NaN        S  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "women_and_children_df = df.loc[(df.Sex == \"female\")\n",
-    "                              | (df.Age<15)]\n",
+    "                               | (df.Age < 15)]\n",
     "male_all_ages_df = df.loc[df.Sex == \"male\"]\n",
     "women_and_children_df.head()\n",
-    "#male_all_ages_df.head()"
+    "# male_all_ages_df.head()"
    ]
   },
   {
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
        "Text(0, 0.5, 'Count')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -958,8 +958,8 @@
    ],
    "source": [
     "# Subplots used. 2 columns\n",
-    "fig, axes = plt.subplots(ncols=2, nrows=1, figsize=(18,8))\n",
-    "#axes[0] means the one on the left\n",
+    "fig, axes = plt.subplots(ncols=2, nrows=1, figsize=(18, 8))\n",
+    "# axes[0] means the one on the left\n",
     "ax_lft = axes[0]\n",
     "male_all_ages_df.Survived.hist(ax=ax_lft)\n",
     "ax_lft.set_title('Male all ages')\n",
@@ -989,7 +989,7 @@
    "outputs": [],
    "source": [
     "first_class_df = df.loc[df.Pclass == \"1\"]\n",
-    "second_third_class_df = df.loc[df.Pclass.isin([\"2\",\"3\"])]"
+    "second_third_class_df = df.loc[df.Pclass.isin([\"2\", \"3\"])]"
    ]
   },
   {
@@ -1028,7 +1028,7 @@
     }
    ],
    "source": [
-    "fig, axes = plt.subplots(ncols=2, nrows=1, figsize=(18,8))\n",
+    "fig, axes = plt.subplots(ncols=2, nrows=1, figsize=(18, 8))\n",
     "\n",
     "ax_lft = axes[0]\n",
     "first_class_df.Survived.hist(ax=ax_lft)\n",
@@ -1382,7 +1382,6 @@
     }
    ],
    "source": [
-    "\n",
     "female_children_df = df.query('Sex == \"female\"'\n",
     "                              or 'Age<15')\n",
     "female_children_df.head()"
@@ -1442,6 +1441,7 @@
        "      <th>Fare</th>\n",
        "      <th>Cabin</th>\n",
        "      <th>Embarked</th>\n",
+       "      <th>Age_x_Fare</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1460,6 +1460,7 @@
        "      <td>7.2500</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
+       "      <td>159.5000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1476,6 +1477,7 @@
        "      <td>71.2833</td>\n",
        "      <td>C85</td>\n",
        "      <td>C</td>\n",
+       "      <td>2708.7654</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1492,6 +1494,7 @@
        "      <td>7.9250</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
+       "      <td>206.0500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1508,6 +1511,7 @@
        "      <td>53.1000</td>\n",
        "      <td>C123</td>\n",
        "      <td>S</td>\n",
+       "      <td>1858.5000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1524,6 +1528,7 @@
        "      <td>8.0500</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
+       "      <td>281.7500</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1544,12 +1549,12 @@
        "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
        "4                           Allen, Mr. William Henry    male  35.0      0   \n",
        "\n",
-       "   Parch            Ticket     Fare Cabin Embarked  \n",
-       "0      0         A/5 21171   7.2500   NaN        S  \n",
-       "1      0          PC 17599  71.2833   C85        C  \n",
-       "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
-       "3      0            113803  53.1000  C123        S  \n",
-       "4      0            373450   8.0500   NaN        S  "
+       "   Parch            Ticket     Fare Cabin Embarked  Age_x_Fare  \n",
+       "0      0         A/5 21171   7.2500   NaN        S    159.5000  \n",
+       "1      0          PC 17599  71.2833   C85        C   2708.7654  \n",
+       "2      0  STON/O2. 3101282   7.9250   NaN        S    206.0500  \n",
+       "3      0            113803  53.1000  C123        S   1858.5000  \n",
+       "4      0            373450   8.0500   NaN        S    281.7500  "
       ]
      },
      "execution_count": 35,
@@ -1558,7 +1563,7 @@
     }
    ],
    "source": [
-    "df.eval('Age_x_Fare = Age*Fare')\n",
+    "df = df.eval('Age_x_Fare = Age*Fare')\n",
     "df.head()"
    ]
   },
@@ -1589,21 +1594,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pandasql\n",
-      "  Downloading https://files.pythonhosted.org/packages/6b/c4/ee4096ffa2eeeca0c749b26f0371bd26aa5c8b611c43de99a4f86d3de0a7/pandasql-0.7.3.tar.gz\n",
+      "Requirement already satisfied: pandasql in c:\\users\\rocio\\anaconda3\\lib\\site-packages (0.7.3)\n",
       "Requirement already satisfied: numpy in c:\\users\\rocio\\anaconda3\\lib\\site-packages (from pandasql) (1.16.2)\n",
-      "Requirement already satisfied: pandas in c:\\users\\rocio\\anaconda3\\lib\\site-packages (from pandasql) (0.24.2)\n",
       "Requirement already satisfied: sqlalchemy in c:\\users\\rocio\\anaconda3\\lib\\site-packages (from pandasql) (1.3.1)\n",
+      "Requirement already satisfied: pandas in c:\\users\\rocio\\anaconda3\\lib\\site-packages (from pandasql) (0.24.2)\n",
       "Requirement already satisfied: python-dateutil>=2.5.0 in c:\\users\\rocio\\anaconda3\\lib\\site-packages (from pandas->pandasql) (2.8.0)\n",
       "Requirement already satisfied: pytz>=2011k in c:\\users\\rocio\\anaconda3\\lib\\site-packages (from pandas->pandasql) (2018.9)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\rocio\\appdata\\roaming\\python\\python37\\site-packages (from python-dateutil>=2.5.0->pandas->pandasql) (1.12.0)\n",
-      "Building wheels for collected packages: pandasql\n",
-      "  Building wheel for pandasql (setup.py): started\n",
-      "  Building wheel for pandasql (setup.py): finished with status 'done'\n",
-      "  Stored in directory: C:\\Users\\Rocio\\AppData\\Local\\pip\\Cache\\wheels\\53\\6c\\18\\b87a2e5fa8a82e9c026311de56210b8d1c01846e18a9607fc9\n",
-      "Successfully built pandasql\n",
-      "Installing collected packages: pandasql\n",
-      "Successfully installed pandasql-0.7.3\n"
+      "Requirement already satisfied: six>=1.5 in c:\\users\\rocio\\appdata\\roaming\\python\\python37\\site-packages (from python-dateutil>=2.5.0->pandas->pandasql) (1.12.0)\n"
      ]
     }
    ],
@@ -1622,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1668,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1754,7 +1751,7 @@
        "9                Nasser, Mrs. Nicholas (Adele Achem)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1777,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1994,7 +1991,7 @@
        "29                          de Mulder, Mr. Theodore   9.5000"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
